# boost_interprocess_ex

./: CMakeLists.txt  receiver.cpp  sender.cpp
